kubernetes/opencost/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opencost
  labels:
    app.kubernetes.io/instance: opencost
