kubernetes/opencost/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opencost
  namespace: opencost
  labels:
    app: opencost
    app.kubernetes.io/instance: opencost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opencost
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: opencost
      annotations:
        enable.version-checker.io/opencost: "true"
        enable.version-checker.io/opencost-ui: "true"
    spec:
      restartPolicy: Always
      serviceAccountName: opencost
      containers:
        - image: quay.io/kubecost1/kubecost-cost-model:prod-1.99.0
          name: opencost
          resources:
            requests:
              cpu: "10m"
              memory: "128Mi"
              ephemeral-storage: 0Mi
            limits:
              cpu: "250m"
              memory: "1Gi"
              ephemeral-storage: 0Mi
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            privileged: false
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            # seccompProfile:
            #   type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: pricing-model
              mountPath: /models/default.json
              subPath: default.json
        - image: quay.io/kubecost1/opencost-ui:prod-1.99.0
          name: opencost-ui
          resources:
            requests:
              cpu: "10m"
              memory: "32Mi"
              ephemeral-storage: 10Mi
            limits:
              cpu: "100m"
              memory: "64Mi"
              ephemeral-storage: 10Mi
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: false # true
            privileged: false
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            #   seccompProfile:
            #     type: RuntimeDefault
            # capabilities:
            #   drop:
            #     - ALL
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.nginx.conf
              subPath: default.nginx.conf
            - name: var-cache-nginx
              mountPath: /var/cache/nginx
            - name: var-run
              mountPath: /var/run
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: pricing-model
          configMap:
            name: pricing-model
        - name: var-cache-nginx
          emptyDir:
            sizeLimit: 1Mi
        - name: var-run
          emptyDir:
            sizeLimit: 1Mi
