kubernetes/opencost/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: opencost
  namespace: opencost
  labels:
    app.kubernetes.io/instance: opencost
spec:
  selector:
    app: opencost
  type: ClusterIP
  ports:
    - name: opencost
      port: 9003
      targetPort: 9003
    - name: opencost-ui
      port: 9090
      targetPort: 9090
