kubernetes/opencost/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: opencost
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/instance: opencost
spec:
  policyTypes:
    - Ingress
    # - Egress
  podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-ingress
  namespace: opencost
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/instance: opencost
spec:
  policyTypes:
    - Ingress
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-dns-traffic
#   namespace: opencost
#   annotations:
#     argocd.argoproj.io/sync-wave: "0"
#   labels:
#     app.kubernetes.io/instance: opencost
# spec:
#   policyTypes:
#     - Egress
#   podSelector: {}
#   egress:
#     - to:
#         - namespaceSelector:
#             matchLabels:
#               kubernetes.io/metadata.name: openshift-dns
#           podSelector:
#             matchLabels:
#               dns.operator.openshift.io/daemonset-dns: default
#       ports:
#         - port: 5353
#           protocol: UDP
#         - port: 5353
#           protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus
  namespace: opencost
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/instance: opencost
spec:
  policyTypes:
    - Ingress
    # - Egress
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: prometheus
          podSelector:
            matchLabels:
              app: prometheus-server
      ports:
        - port: 9003
          protocol: TCP
  # egress:
  #   - to:
  #       - namespaceSelector:
  #           matchLabels:
  #             kubernetes.io/metadata.name: prometheus
  #         podSelector:
  #           matchLabels:
  #             app: prometheus-server
  #     ports:
  #       - port: 9090
  #         protocol: TCP
# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-api-server
#   namespace: opencost
#   annotations:
#     argocd.argoproj.io/sync-wave: "0"
#   labels:
#     app.kubernetes.io/instance: opencost
# spec:
#   podSelector: {}
#   policyTypes:
#     - Egress
#   egress:
#     - to:
#         - podSelector:
#             matchLabels:
#               app: openshift-kube-apiserver
#           namespaceSelector:
#             matchLabels:
#               kubernetes.io/metadata.name: openshift-kube-apiserver
#       ports:
#         - protocol: TCP
#           port: 6443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-communication
  namespace: opencost
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/instance: opencost
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    # - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: opencost
          podSelector:
            matchLabels:
              app: opencost
  # egress:
  #   - to:
  #       - namespaceSelector:
  #           matchLabels:
  #             kubernetes.io/metadata.name: opencost
  #         podSelector:
  #           matchLabels:
  #             app: opencost
